# steamboat-py

./: .gitignore  .gitpod.yml  .pre-commit-config.yml  CHANGELOG.md  README.md  environment.yml  justfile  pyproject.toml
.github/workflows/: release.yml
steamboat/: ont.py  utils.py
steamboat/cli/ont/: merge.py
steamboat/cli/repos/arln/: batch.py
steamboat/cli/repos/gisaid/: batch.py
steamboat/cli/repos/nwss/: batch.py
steamboat/io/: check.py  fasta.py  table.py  yaml.py
steamboat/repos/: arln.py  gisaid.py  nwss.py
steamboat/repository/: gisaid.py
steamboat/utils/: fasta.py  generic.py
tests/: conftest.py
tests/io/: test_check.py  test_fasta.py  test_table.py  test_yaml.py
tests/ont/: create-test-data.sh
tests/repos/: test_arln.py  test_nwss.py
tests/utils/: test_generic.py
