[tool.poetry]
name = "steamboat-binf"
packages = [
    {include = "steamboat"}
]
version = "1.0.0"
description = "A collection of tools/scripts for microbial bioinformatics"
authors = [
    "Robert A. Petit III <robbie.petit@gmail.com>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rpetit3/steamboat-py"
repository = "https://github.com/rpetit3/steamboat-py"
keywords = ["bioinformatics"]

[tool.poetry.scripts]
gisaid-batch = "steamboat.cli.repos.gisaid.batch:main"

[tool.poetry.dependencies]
python = "^3.10.0"
rich-click = "^1.6.1"
executor = "^23.2"
rich = "^13.3.1"
biopython = "^1.84"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.0"
flake8 = "^5.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
