[tool.poetry]
name = "steamboat-binf"
packages = [
    {include = "steamboat"}
]
version = "1.3.1"
description = "A collection of tools/scripts for microbial bioinformatics"
authors = [
    "Robert A. Petit III <robbie.petit@gmail.com>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rpetit3/steamboat-py"
repository = "https://github.com/rpetit3/steamboat-py"
keywords = ["bioinformatics"]

[tool.poetry.scripts]
arln-batch = "steamboat.cli.repos.arln.batch:main"
gisaid-batch = "steamboat.cli.repos.gisaid.batch:main"
nwss-batch = "steamboat.cli.repos.nwss.batch:main"
ont-merge = "steamboat.cli.ont.merge:main"

[tool.poetry.dependencies]
python = "^3.10.0"
rich-click = "^1.6.1"
rich = "^13.3.1"
biopython = "^1.84"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.4"
pytest = "^9.0.2"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E501", "E713", "F401", "E402", "F403"]

[tool.ruff.lint.isort]
known-first-party = ["steamboat"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
